# PDF2MD

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: README.md
docs/: setup.md
pdf2md/: __init__.py  cli.py  converter.py  types.py  webui.py
pdf2md/extractors/: __init__.py  formulas.py  images.py  layout.py  tables.py  text.py
pdf2md/postprocess/: __init__.py  headings.py  lists.py  paragraphs.py
pdf2md/writers/: __init__.py  markdown.py
tests/: test_layout.py  test_postprocess.py
