[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2md"
version = "0.1.0"
description = "Convert text-based PDFs (academic papers, ebooks) to clean Markdown."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "PDF2MD Contributors" }]
keywords = ["pdf", "markdown", "academic", "ebook", "converter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "PyMuPDF>=1.24",
    "pdfplumber>=0.11",
    "Pillow>=10.0",
    "click>=8.1",
]

[project.optional-dependencies]
webui = ["gradio>=4.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
pdf2md = "pdf2md.cli:main"

[project.urls]
Homepage = "https://github.com/ChenyuHeee/PDF2MD"
Issues = "https://github.com/ChenyuHeee/PDF2MD/issues"

[tool.setuptools.packages.find]
include = ["pdf2md*"]

[tool.ruff]
line-length = 100
target-version = "py39"
